# githubstats

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  QUERIES.md  README.md  index.html  load.sh  run_as_docker.sh
.devcontainer/: devcontainer.json
data/: language-ratings-2015-01-active-repos.jsonl  language-ratings-2015-01-developer-activity.jsonl  language-ratings-2015-01-issue-count.jsonl  language-ratings-2015-01-pr-count.jsonl  language-ratings-2015-01-push-count.jsonl  language-ratings-2015-01-star-count.jsonl  language-ratings-2015-02-active-repos.jsonl  language-ratings-2015-02-developer-activity.jsonl  language-ratings-2015-02-issue-count.jsonl  language-ratings-2015-02-pr-count.jsonl  language-ratings-2015-02-push-count.jsonl  language-ratings-2015-02-star-count.jsonl  language-ratings-2015-03-active-repos.jsonl  language-ratings-2015-03-developer-activity.jsonl  language-ratings-2015-03-issue-count.jsonl  language-ratings-2015-03-pr-count.jsonl  language-ratings-2015-03-push-count.jsonl  language-ratings-2015-03-star-count.jsonl  language-ratings-2015-04-active-repos.jsonl  language-ratings-2015-04-developer-activity.jsonl  language-ratings-2015-04-issue-count.jsonl  language-ratings-2015-04-pr-count.jsonl  language-ratings-2015-04-push-count.jsonl  language-ratings-2015-04-star-count.jsonl  language-ratings-2015-05-active-repos.jsonl  language-ratings-2015-05-developer-activity.jsonl  language-ratings-2015-05-issue-count.jsonl  language-ratings-2015-05-pr-count.jsonl  language-ratings-2015-05-push-count.jsonl  language-ratings-2015-05-star-count.jsonl  language-ratings-2015-06-active-repos.jsonl  language-ratings-2015-06-developer-activity.jsonl  language-ratings-2015-06-issue-count.jsonl  language-ratings-2015-06-pr-count.jsonl  language-ratings-2015-06-push-count.jsonl  language-ratings-2015-06-star-count.jsonl  language-ratings-2015-07-active-repos.jsonl  language-ratings-2015-07-developer-activity.jsonl  language-ratings-2015-07-issue-count.jsonl  language-ratings-2015-07-pr-count.jsonl  (+788 more)
(+15 files in other folders)
