[package]
name = "fetch_month"
version = "0.1.0"
edition = "2024"


[dependencies]
reqwest = { version = "0.13", features = ["json", "native-tls-vendored"] }
bytes = "1"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
anyhow = "1"
humanize-duration = "0.0.7"
async-channel = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "io-util",
    "io-std",
] }

[dev-dependencies]
tempfile = "3"
